--- a/WebAirport/Views/TypeAirplane/Create.cshtml
+++ b/WebAirport/Views/TypeAirplane/Create.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "Новый тип самолета";
 }
 
+<div>
+    @Html.ActionLink("Список типов самолетов", "Index")
+</div>
+
 <h2>Добавление нового типа самолета</h2>
 
 @Html.ValidationSummary(true)
