--- a/WebAirport/Views/TypeAirplane/Edit.cshtml
+++ b/WebAirport/Views/TypeAirplane/Edit.cshtml
@@ -3,6 +3,11 @@
     ViewBag.Title = "Редактирование";
 }
 
+<div>
+    @Html.ActionLink("Добавить тип самолета", "Create")
+    @Html.ActionLink("Список типов самолетов", "Index")
+</div>
+
 <h2>Редактирование типа самолета</h2>
 
 @Html.ValidationSummary(true)
