--- a/WebAirport/Views/Position/Index.cshtml
+++ b/WebAirport/Views/Position/Index.cshtml
@@ -2,49 +2,35 @@
 @using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Список должностей";
 }
+<div>
+    @Html.ActionLink("Добавить должность", "Create")
+</div>
+
 <h2>Управление должностями</h2>
-@Html.ActionLink("Добавить должность", "Create")
 
-<h2>Список должностей</h2>
-
-
-<table>
-    <tr>
-        <td>
-            <p>
-                Название
-            </p>
-        </td>
-        <td>
-            <p>
-                Оклад
-            </p>
-        </td>
-        <td>
-            <p>
-                Обязанности
-            </p>
-        </td>
-        <td>
-            <p>
-                Требования
-            </p>
-        </td>
-    </tr>
-    @foreach (var p in Model)
-    {
+<div>
+    <table>
         <tr>
-            <td><p>@p.JobTitle</p></td>
-            <td><p>@p.Salary</p></td>
-            <td><p>@p.Responsibilities</p></td>
-            <td><p>@p.Requirements</p></td>
-            <td><a href="/Position/Edit/@p.Id">Редактировать</a></td>
-            <td><a href="/Position/Delete/@p.Id">Удалить</a></td>
+            <td>Название</td>
+            <td>Оклад</td>
+            <td>Обязанности</td>
+            <td>Требования</td>
         </tr>
-    }
-</table>
+        @foreach (var p in Model)
+        {
+            <tr>
+                <td>@p.JobTitle</td>
+                <td>@p.Salary</td>
+                <td>@p.Responsibilities</td>
+                <td>@p.Requirements</td>
+                <td>@Html.ActionLink("Редактировать", "Edit", new { p.Id })</td>
+                <td>@Html.ActionLink("Удалить", "Delete", new { p.Id })</td>
+            </tr>
+        }
+    </table>
+</div>
 <br />
 Страница @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) из @Model.PageCount
 
